--- a/mta.yaml
+++ b/mta.yaml
@@ -1,7 +1,7 @@
 _schema-version: 3.3.0
 ID: lab2cash
 version: 1.0.0
-description: "A simple CAP project."
+description: "Cashback extension project."
 parameters:
   enable-parallel-deployments: true
 build-parameters:
@@ -11,41 +11,61 @@ build-parameters:
         - npm ci
         - npx cds build --production
 modules:
-  - name: lab2cash-srv
+  - name: lab2cash-cap-srv
     type: nodejs
     path: gen/srv
     parameters:
-      instances: 1
       buildpack: nodejs_buildpack
     build-parameters:
-      builder: npm-ci
+      builder: npm
     provides:
       - name: srv-api # required by consumers of CAP services (e.g. approuter)
         properties:
           srv-url: ${default-url}
     requires:
-      - name: lab2cash-auth
-      - name: lab2cash-db
+      - name: lab2cash-cap-destination
+      - name: lab2cash-cap-auth
+      - name: lab2cash-cap-db
 
-  - name: lab2cash-db-deployer
+  - name: lab2cash-cap-db-deployer
     type: hdb
     path: gen/db
     parameters:
       buildpack: nodejs_buildpack
     requires:
-      - name: lab2cash-db
+      - name: lab2cash-cap-db
 
 resources:
-  - name: lab2cash-auth
+
+  - name: lab2cash-cap-destination
+    type: org.cloudfoundry.managed-service
+    parameters:
+      config:
+        HTML5Runtime_enabled: true
+        init_data:
+          instance:
+            destinations:
+              - Authentication: NoAuthentication
+                Name: ui5
+                ProxyType: Internet
+                Type: HTTP
+                URL: https://ui5.sap.com
+            existing_destinations_policy: update
+        version: 1.0.0
+      service: destination
+      service-plan: lite
+
+  - name: lab2cash-cap-auth
     type: org.cloudfoundry.managed-service
     parameters:
       service: xsuaa
       service-plan: application
       path: ./xs-security.json
       config:
-        xsappname: lab2cash-${org}-${space}
+        xsappname: lab2cash-${space}
         tenant-mode: dedicated
-  - name: lab2cash-db
+
+  - name: lab2cash-cap-db
     type: com.sap.xs.hdi-container
     parameters:
       service: hana
