--- a/mta.yaml
+++ b/mta.yaml
@@ -4,6 +4,8 @@ version: 1.0.0
 description: "Cashback extension project."
 parameters:
   enable-parallel-deployments: true
+  memory: 256M
+  disk-quota: 256M
 build-parameters:
   before-all:
     - builder: custom
